--- a/SourceCode/Parcial02/Parcial02.csproj
+++ b/SourceCode/Parcial02/Parcial02.csproj
@@ -105,6 +105,12 @@
         <Reference Include="WindowsFormsIntegration" />
     </ItemGroup>
     <ItemGroup>
+        <Compile Include="CambiarContrasena.cs">
+          <SubType>Form</SubType>
+        </Compile>
+        <Compile Include="CambiarContrasena.Designer.cs">
+          <DependentUpon>CambiarContrasena.cs</DependentUpon>
+        </Compile>
         <Compile Include="ConnectionDB.cs" />
         <Compile Include="Direccion.cs" />
         <Compile Include="Form1.cs">
@@ -126,6 +132,9 @@
         <Compile Include="Properties\AssemblyInfo.cs" />
         <Compile Include="Usuario.cs" />
         <Compile Include="UsuariosConsulta.cs" />
+        <EmbeddedResource Include="CambiarContrasena.resx">
+          <DependentUpon>CambiarContrasena.cs</DependentUpon>
+        </EmbeddedResource>
         <EmbeddedResource Include="Form1.resx">
           <DependentUpon>Form1.cs</DependentUpon>
         </EmbeddedResource>
