Add: create and delete products done

--- a/SourceCode/Parcial02/Parcial02.csproj
+++ b/SourceCode/Parcial02/Parcial02.csproj
@@ -129,6 +129,7 @@
         <Compile Include="NegociosConsulta.cs" />
         <Compile Include="Orden.cs" />
         <Compile Include="Producto.cs" />
+        <Compile Include="ProductosConsulta.cs" />
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
         <Compile Include="Usuario.cs" />
