--- a/SourceCode/Parcial02/Parcial02.csproj
+++ b/SourceCode/Parcial02/Parcial02.csproj
@@ -113,6 +113,7 @@
         </Compile>
         <Compile Include="ConnectionDB.cs" />
         <Compile Include="Direccion.cs" />
+        <Compile Include="DireccionesConsulta.cs" />
         <Compile Include="Form1.cs">
             <SubType>Form</SubType>
         </Compile>
